--- a/src/xEasyApp.Web/xEasyApp.Web.csproj
+++ b/src/xEasyApp.Web/xEasyApp.Web.csproj
@@ -83,7 +83,15 @@
     <Content Include="Images\icons\grid.png" />
     <Content Include="Images\icons\home.png" />
     <Content Include="Images\icons\indicator.gif" />
+    <Content Include="Images\icons\right_key.gif" />
+    <Content Include="Images\icons\rowdelete.png" />
     <Content Include="Images\icons\s.gif" />
+    <Content Include="Images\icons\table.gif" />
+    <Content Include="Images\icons\table_copy.png" />
+    <Content Include="Images\icons\table_refresh.png" />
+    <Content Include="Images\icons\user.gif" />
+    <Content Include="Images\icons\view.png" />
+    <Content Include="Images\icons\xslt.png" />
     <Content Include="Javascripts\common.js" />
     <Content Include="Javascripts\intellisense\jquery-1.4.1-vsdoc.js" />
     <Content Include="Javascripts\jquery-1.4.2.js" />
@@ -251,6 +259,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\SysManage\RoleInfoList.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SysManage\EditRole.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SysManage\SetRoleUser.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SysManage\SetRoleRight.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SysManage\RoleUserRelationList.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
