--- a/src/xEasyApp.Core/xEasyApp.Core.csproj
+++ b/src/xEasyApp.Core/xEasyApp.Core.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\refdll\SubSonic.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
@@ -51,26 +52,39 @@
   <ItemGroup>
     <Compile Include="BaseClass\MyControllerBase.cs" />
     <Compile Include="Biz\SysManageService.cs" />
+    <Compile Include="Biz\UserService.cs" />
+    <Compile Include="Common\StringKeyValueCache.cs" />
+    <Compile Include="Common\UserCache.cs" />
+    <Compile Include="Common\Utility.cs" />
+    <Compile Include="Configurations\AppConfig.cs" />
+    <Compile Include="Configurations\xEasyAppConfig.cs" />
     <Compile Include="Configurations\JsConfig.cs" />
+    <Compile Include="Entities\IUser.cs" />
     <Compile Include="Entities\PageList.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Exceptions\BizException.cs" />
     <Compile Include="Extensions\ControllerExtension.cs" />
     <Compile Include="Extensions\HtmlHelperExtension.cs" />
     <Compile Include="Interfaces\ISysManageService.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="JsonEntities\JsonError.cs" />
     <Compile Include="JsonEntities\JsonFlexiGridData.cs" />
     <Compile Include="JsonEntities\JsonReturnMessages.cs" />
     <Compile Include="JsonEntities\JsonTreeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\_Generated\ActiveRecord.cs">
+    <Compile Include="Repositories\BaseEntity.cs" />
+    <Compile Include="Repositories\Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\Repositories\DepartmentRepository.cs" />
+    <Compile Include="Repositories\Repositories\RoleInfoRepository.cs" />
+    <Compile Include="Repositories\SqlHelper.cs" />
+    <Compile Include="Repositories\SqlHelperConfig.cs" />
+    <Compile Include="Repositories\StoredProcedure.cs" />
+    <Compile Include="Repositories\StoredProcedures.cs" />
+    <Compile Include="Repositories\UserInfo.cs" />
+    <Compile Include="Repositories\_Generated\Repositories.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ActiveRecord.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Repositories\_Generated\Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
     <Compile Include="Repositories\_Generated\StoredProcedures.cs">
       <AutoGen>True</AutoGen>
@@ -90,16 +104,12 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Entities\Entities.cd" />
-    <None Include="Repositories\_Generated\ActiveRecord.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ActiveRecord.cs</LastGenOutput>
-    </None>
-    <None Include="Repositories\_Generated\Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Context.cs</LastGenOutput>
-    </None>
     <None Include="Repositories\_Generated\Settings.ttinclude" />
     <None Include="Repositories\_Generated\SQLServer.ttinclude" />
+    <None Include="Repositories\_Generated\Repositories.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Repositories.cs</LastGenOutput>
+    </None>
     <None Include="Repositories\_Generated\StoredProcedures.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>StoredProcedures.cs</LastGenOutput>
@@ -108,9 +118,6 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Structs.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Common\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
