--- a/src/xEasyApp.Web/Web.config
+++ b/src/xEasyApp.Web/Web.config
@@ -10,15 +10,19 @@
             <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
             <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
         </sectionGroup>
+       <section name="xEasyAppConfig" type="xEasyApp.Core.Configurations.xEasyAppConfig,xEasyApp.Core"/>
   </configSections>
+  <xEasyAppConfig>      
+        <!--运行时,如果mode为debug时,获取用户总是为userid,否则获取当前登录用户-->
+        <Runtime mode="Debug" userid="admin"/>
+  </xEasyAppConfig>
   <appSettings>
     <add key="ClientValidationEnabled" value="true"/> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
   </appSettings>
     <connectionStrings>
         <add name="mainDB" connectionString="Database=xEasyApp;Server=(local);Uid=sa;Pwd=123456;Enlist=true;Pooling=true;Connection Reset=false;Connect TimeOut=3000;" providerName="System.Data.SqlClient"/>
-
-    </connectionStrings>
+ </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -29,11 +33,9 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
