--- a/src/xEasyApp.Web/xEasyApp.Web.csproj
+++ b/src/xEasyApp.Web/xEasyApp.Web.csproj
@@ -311,6 +311,12 @@
   <ItemGroup>
     <Content Include="Views\SysManage\DeptUserList.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SysManage\UserList.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SysManage\EditUser.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
