--- a/src/xEasyApp.Web/xEasyApp.Web.csproj
+++ b/src/xEasyApp.Web/xEasyApp.Web.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\SetDeptViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +82,9 @@
     <Content Include="Images\bgs\text-bg.gif" />
     <Content Include="Images\icons\accept.png" />
     <Content Include="Images\icons\add.png" />
+    <Content Include="Images\icons\alert.png" />
+    <Content Include="Images\icons\app_key.png" />
+    <Content Include="Images\icons\check.png" />
     <Content Include="Images\icons\close.gif" />
     <Content Include="Images\icons\checkbox_0.gif" />
     <Content Include="Images\icons\checkbox_1.gif" />
@@ -91,10 +95,21 @@
     <Content Include="Images\icons\edit.png" />
     <Content Include="Images\icons\exclamation.png" />
     <Content Include="Images\icons\expandh.gif" />
+    <Content Include="Images\icons\folder_user.gif" />
+    <Content Include="Images\icons\group.gif" />
+    <Content Include="Images\icons\key_go.png" />
     <Content Include="Images\icons\laught.png" />
     <Content Include="Images\icons\library.png" />
+    <Content Include="Images\icons\normalrole.png" />
+    <Content Include="Images\icons\qcheck.gif" />
+    <Content Include="Images\icons\qdelete.gif" />
+    <Content Include="Images\icons\query.png" />
+    <Content Include="Images\icons\sdelete.png" />
     <Content Include="Images\icons\smile.png" />
+    <Content Include="Images\icons\sysrole.png" />
+    <Content Include="Images\icons\trash.gif" />
     <Content Include="Images\icons\unhappy.png" />
+    <Content Include="Images\icons\uquery.gif" />
     <Content Include="Images\icons\user.png" />
     <Content Include="Images\icons\warning.png" />
     <Content Include="Images\icons\grid.png" />
@@ -276,7 +291,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Javascripts\plugins\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
