--- a/src/xEasyApp.Core/xEasyApp.Core.csproj
+++ b/src/xEasyApp.Core/xEasyApp.Core.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Repositories\BaseEntity.cs" />
     <Compile Include="Repositories\Entities\P_Entities.cs" />
     <Compile Include="Repositories\Repositories\BaseRepository.cs" />
-    <Compile Include="Repositories\Repositories\DepartmentRepository.cs" />
+    <Compile Include="Repositories\Repositories\OrganizationRepository.cs" />
     <Compile Include="Repositories\Repositories\DictInfoRepository.cs" />
     <Compile Include="Repositories\Repositories\PrivilegeRepository.cs" />
     <Compile Include="Repositories\Repositories\RoleInfoRepository.cs" />
