--- a/src/xEasyApp.Web/Web.config
+++ b/src/xEasyApp.Web/Web.config
@@ -14,7 +14,7 @@
   </configSections>
   <xEasyAppConfig>      
         <!--运行时,如果mode为debug时,获取用户总是为userid,否则获取当前登录用户-->
-        <Runtime mode="Debug" userid="wangsm"/>
+        <Runtime mode="Debug" userid="admin"/>
   </xEasyAppConfig>
   <appSettings>
     <add key="ClientValidationEnabled" value="true"/> 
